<resources>
    <string name="app_name">ABC Book</string>
    <string name="app_title">ABC</string>
    <string name="app_subtitle">My First Book of</string>

    <string name="author_title">Author:</string>
    <string name="author_name">Farhan Ali</string>
    <string name="roll_num_title">Roll Number:</string>
    <string name="roll_num">19L-1236</string>

    <string name="start_button_text">Start</string>
    <string name="back_button_text">Back</string>
    <string name="next_button_text">Next</string>
    <string name="finish_button_text">Finish</string>
</resources>