<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <!-- App Title and Subtitle -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_subtitle"
            android:textColor="@color/h1_text_color"
            android:textSize="@dimen/h2_text_size" />
        <TextView
            android:id="@+id/subtitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_title"
            android:textColor="@color/h1_text_color"
            android:textSize="@dimen/h1_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Author and Roll Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/author_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/normal_text_color"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/author_title" />
            <TextView
                android:id="@+id/author_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/normal_text_color"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginStart="10dp"
                android:text="@string/author_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/roll_num_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/normal_text_color"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/roll_num_title" />
            <TextView
                android:id="@+id/roll_num_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/normal_text_color"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/roll_num" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/start_button_text"
        android:textSize="@dimen/normal_text_size" />


</LinearLayout>